# Vertical-Lander-Bang-Bang

./: CMakeLists.txt  README.md  controller_design.asv  controller_design.m  controller_design_v2.asv  controller_design_v2.m  hop_defs.h  hop_test.cpp  kalmanExample.c  mip_balance_modified.cpp  prop_system_id.cpp
include/: bblidarlite_v3hp.h  hop_defs.h
matlab_scripts/: controller_design_v2.m  lidar_range_test.m
matlab_scripts/ThrustSysID/: Log_2024-06-27_121843.csv  Log_2024-06-27_131658.csv  Log_2024-06-27_131659.csv  RampTest_2024-06-27_115711.csv  RampTest_avgSamp1_mxVl2000_1_2024-06-27_130610.csv  RampTest_avgSamp1_mxVl2000_doubProp_1_2024-06-27_132115.csv  myRampScript.js  myStepRespRecLess.js  myStepResponse.js  myStepTest_onestep_2024-06-27_115907.csv  myStepTest_onestep_2024-06-27_121128.csv  myStepTest_onestep_avgSamp1_mxVl2000_1_2024-06-27_131013.csv  myStepTest_onestep_avgSamp1_mxVl2000_doubProp_1_fullBatt_2024-06-27_135756.csv
matlab_scripts/ThrustSysID/FirstSamplingTryingMethods/: Log_2024-06-25_160748.csv  Log_2024-06-25_160940.csv  StepsTest_2024-06-25_160533.csv
matlab_scripts/ThrustSysID/MATLAB Modeling/: FirstExampleARX.m  FirstTryAtSysIDUsingApp.sid  RampTest_avgSamp1_min1200_mxVl2000_doubProp_3_fullBatt_2024-06-27_135603.csv  RampTest_avgSamp1_mxVl2000_doubProp_1_2024-06-27_132115.csv  fittingARXToRamptest.m  fittingARXtoRampAndStepTest_2prop_min1200tomax2000.m  idprefs.mat  (+1 more)
src/: accel_test.cpp  actuator_test  actuator_test.cpp  actuator_test_v2.cpp  bblidarlite_v3hp.cpp  height_test  height_test.cpp  helloWorld.cpp  hop_test.cpp  imu_data_test.cpp  lidar_test  lidar_test.cpp
